--- a/style.css
+++ b/style.css
@@ -17,6 +17,28 @@ body {
   background-color: #c4c4c4;
 }
 
+.bg {
+  min-width: 100vw;
+  min-height: 100vh;
+  background-color: rgb(102, 102, 102);
+}
+.Q-Box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  z-index: 1;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  width: 30vw;
+  height: 30vh;
+  border-radius: 12px;
+  background-color: green;
+}
+
 .polaroid {
   background-color: #ffffff;
   width: 400px;
