--- a/style.css
+++ b/style.css
@@ -15,28 +15,30 @@
 
 body {
   background-color: #c4c4c4;
+  display: flex;
+  justify-content: center;
+}
+
+.section {
+  display: flex;
+  flex-direction: column;
+  width: 400px;
+  height: 600px;
+  position: absolute;
+  top: 50%;
+  margin-top: -300px;
 }
 
 .Q-Box {
   display: flex;
   justify-content: center;
   align-items: center;
-  position: absolute;
-  z-index: 1;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  display: flex;
-  flex-direction: column;
-  width: 30vw;
-  height: 30vh;
-  border-radius: 12px;
+  padding: 12px;
+  border-radius: 12px 12px 0 0;
   background-color: #ffffff;
 }
 
 select {
-  width: 196px;
-  height: 41px;
   color: #999;
   border: none;
   outline: none;
@@ -44,32 +46,27 @@ select {
 }
 
 .polaroid {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: #ffffff;
-  width: 400px;
-  height: 600px;
-  position: relative;
-  left: 50%;
-  top: 50%;
-  margin-left: -200px;
-  margin-top: 100px;
+  flex-direction: column;
+  border-radius: 0 0 12px 12px;
 }
 
 .photo {
   background-color: #c4c4c4;
   width: 320px;
   height: 320px;
-  position: absolute;
-  left: 40px;
-  top: 40px;
 }
 
 .description {
   width: 320px;
-  height: 200px;
-  position: absolute;
+  height: 100px;
   left: 40px;
   top: 400px;
   padding: 0 16px;
+  margin: 24px;
 }
 
 .content {
