--- a/style.css
+++ b/style.css
@@ -101,3 +101,20 @@ label {
 .content {
   margin: 8px 0;
 }
+
+.share-icon {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  width: 50px;
+  height: 50px;
+  border-color: black;
+  border-radius: 50%;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.fa-share-nodes {
+  font-size: small;
+  color: black;
+}
